fix a tiny overflow issue that was driving me insane

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,13 +56,19 @@ body {
       border-top-right-radius: $curve;
     }
 
-    #foo select {
+#foo {
+  overflow:hidden;
+      select {
       width: 100%;
     }
 
-    #foo input {
+    input {
       width: 100%;
     }
+  
+}
+
+
 
     .hideshow {
       position: fixed;
